--- a/tablet.css
+++ b/tablet.css
@@ -1,37 +1,37 @@
 body {
-  height: 100%;
+	height: 100%;
 }
 header .logo-titre img {
-  width: 12em;
-  padding-top: 2em;
+	width: 12em;
+	padding-top: 2em;
 }
 header h1 {
-  font-size: 3em;
+	font-size: 3em;
 }
-.question {
-  margin-left: 1em;
-  margin-right: 1em;
+.carte {
+	margin-left: 1em;
+	margin-right: 1em;
 }
 h2 {
-  font-size: 3em;
+	font-size: 3em;
 }
 .h2top {
-  padding-left: 4em;
-  padding-right: 4em;
+	padding-left: 4em;
+	padding-right: 4em;
 }
 footer img {
-  height: 7em;
-  width: 6em;
-  padding-right: 5em;
+	height: 7em;
+	width: 6em;
+	padding-right: 5em;
 }
 #progress-container {
-  height: 2em;
+	height: 2em;
 }
 #hint-giveup {
-  margin-top: 5em;
+	margin-top: 5em;
 }
 
 footer button {
-  margin-left: 5em;
-  margin-top: 1.2em;
+	margin-left: 5em;
+	margin-top: 1.2em;
 }
