--- a/tablet.css
+++ b/tablet.css
@@ -11,6 +11,10 @@ header h1 {
 .carte {
 	margin-left: 1em;
 	margin-right: 1em;
+
+	display: flex;
+	justify-content: unset;
+	gap: 2em;
 }
 h2 {
 	font-size: 3em;
@@ -34,4 +38,15 @@ footer img {
 footer button {
 	margin-left: 5em;
 	margin-top: 1.2em;
+}
+
+.container-option {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 2em;
+	margin-top: 2em;
+}
+
+.flagTablet {
+	width: 20em;
 }
