--- a/mobile.css
+++ b/mobile.css
@@ -33,7 +33,7 @@ h1 {
 	border-radius: 3vw;
 	margin-left: 5vw;
 	margin-right: 5vw;
-	height: 50vh;
+	height: 60vh;
 	margin-bottom: 1vh;
 	padding: 1vh;
 }
@@ -107,4 +107,28 @@ footer button {
 	width: 4%;
 	background-color: #60da5b;
 	transition: width 0.5s;
+}
+.flag-image {
+	width: 12em;
+}
+.container-option {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1em;
+}
+.option-button {
+	height: 2em;
+	width: 10em;
+	font-size: 1.5em;
+}
+#next-button {
+	margin-top: 0;
+	font-size: x-large;
+}
+.question-class {
+	font-size: 6vw;
+	text-align: center;
+	padding-left: 2vw;
+	padding-right: 2vw;
 }
